tests/org.eclipse.php.core.tests/workspace/errors/php53/testBracketedNamespace1.pdtt
--TEST--
Bug 516584 - Wrong type inference and syntax check in bracketed namespace
--FILE--
<?php
namespace {

    class Test {
    }
    new Test();

}

namespace name {

    class Test {
    }

}
?>
--EXPECT--